--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <meta-data
-            android:name="android.app.default_searchable"
-            android:value="com.example.SearchActivity" />
-
         <!-- main activity below, will be a home screen -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:value="@xml/searchable" />
         </activity>
 
         <!-- //the physical constants overview page, will hopefully split into smaller categories -->
@@ -29,20 +28,10 @@
             android:label="@string/app_name" />
 
         <!-- searchable activity, performs searches and presents results -->
-
-
         <activity android:name=".SearchableActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-
-
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.searchable"
-
-                android:resource="@xml/searchable" />
         </activity>
 
         <provider
